[package]
name = "quic-relay"
version = "0.1.0"
edition = "2021"
description = "Lightweight UDP relay server for NAT traversal fallback"
license = "MIT"
authors = ["Hebbian Robotics"]
repository = "https://github.com/Hebbian-Robotics/quic-relay"

[[bin]]
name = "quic-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.51", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
